added the second,third and fourth blog

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ea similique inventore perspiciatis cum molestiae earum minus quaerat. Quaerat deleniti incidunt iure enim earum voluptatibus blanditiis expedita dolore, saepe doloribus.</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ea similique inventore perspiciatis cum molestiae earum minus quaerat. Quaerat deleniti incidunt iure enim earum voluptatibus blanditiis expedita dolore, saepe doloribus.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ea similique inventore perspiciatis cum molestiae earum minus quaerat. Quaerat deleniti incidunt iure enim earum voluptatibus blanditiis expedita dolore, saepe doloribus.</p>
+    </div>
+    <div>
+        <h3>My Fourth Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ea similique inventore perspiciatis cum molestiae earum minus quaerat. Quaerat deleniti incidunt iure enim earum voluptatibus blanditiis expedita dolore, saepe doloribus.</p>
     </div>
 </body>
