added a list to push code

--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
         <h3>My Fourth Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ea similique inventore perspiciatis cum molestiae earum minus quaerat. Quaerat deleniti incidunt iure enim earum voluptatibus blanditiis expedita dolore, saepe doloribus.</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaning commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
